feat(api): add settings handler
