# docs/swagger.json
@@ -1406,6 +1406,56 @@
                 }
             }
         },
+        "/office-status": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Settings"
+                ],
+                "summary": "Get office occupancy status",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.OfficeStatusResponse"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Settings"
+                ],
+                "summary": "Update office occupancy status",
+                "parameters": [
+                    {
+                        "description": "Office Status",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.UpdateOfficeStatusRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.OfficeStatusResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/programs": {
             "get": {
                 "description": "Returns a list of study programs and their valid PO versions",
@@ -2034,6 +2084,14 @@
                 }
             }
         },
+        "dto.OfficeStatusResponse": {
+            "type": "object",
+            "properties": {
+                "occupied": {
+                    "type": "boolean"
+                }
+            }
+        },
         "dto.PostProgramResponse": {
             "type": "object",
             "properties": {
@@ -2169,6 +2227,14 @@
                     "type": "string",
                     "maxLength": 32,
                     "minLength": 2
+                }
+            }
+        },
+        "dto.UpdateOfficeStatusRequest": {
+            "type": "object",
+            "properties": {
+                "occupied": {
+                    "type": "boolean"
                 }
             }
         },
